--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.3.6",
+    "craco": "^0.0.3",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "jspdf": "^2.5.1",
